--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,9 @@ Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 greenlet==1.0.0
+gunicorn==20.0.4
 idna==3.1
-ipython==7.21.0
+ipython==7.16.1
 ipython-genutils==0.2.0
 is-disposable-email==1.0.0
 itsdangerous==1.1.0
